@@ -1,0 +1,3 @@
+Site URL: https://homo.xxx/
+Contact: webmaster@homo.xxx
+DMCA: https://homo.xxx/dmca/
