@@ -1,0 +1,3 @@
+Site URL: https://www.perfectgirls.xxx/
+Contact: webmaster@PERFECTGIRLS.XXX
+DMCA: https://www.perfectgirls.xxx/dmca/
