@@ -5,3 +5,10 @@
 - nonktube - fix search, thumbnails
 - eroticage - fix listing
 - justfullporn - fix listing
+- thepornroom - fix listing
+- tubxporn - fix listing
+- voyeur-house.to - removed
+- ok.xxx - fix listing
+- pornhat - fix listing
+- homo.xxx - new site
+- perfectgirls - new site
